samples/_failures_safe/1761319761_abbc1c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c6c81293.c: In function ‘main’:
./samples/SAFE/__tmp_c6c81293.c:163:5: error: expected expression at end of input
  163 |     if (scanf("%d", &start) !=
      |     ^~
./samples/SAFE/__tmp_c6c81293.c:163:5: error: expected declaration or statement at end of input
